--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Columbia Auto UNI",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Auto-completes Columbia UNI logins",
   "icons": {
     "16": "icon16.png",
@@ -21,5 +21,6 @@
                   "https://ssol.columbia.edu/",
                   "https://courseworks.columbia.edu/",
                   "https://newcourseworks.columbia.edu/"],
-  "update_url": "http://www.hcs.harvard.edu/vsant/columbia-auto-uni/updates.xml"
+  "update_url":   "http://www.hcs.harvard.edu/vsant/columbia-auto-uni/updates.xml",
+  "homepage_url": "http://www.hcs.harvard.edu/vsant/columbia-auto-uni/"
 }
