--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Columbia Auto UNI",
   "version": "1.3",
   "description": "Auto-completes Columbia UNI logins",
+  "manifest_version": 2,
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
