--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Columbia Auto UNI",
-  "version": "1.5",
+  "version": "1.6",
   "description": "Auto-completes Columbia UNI logins",
   "manifest_version": 2,
   "icons": {
@@ -9,7 +9,7 @@
     "128": "icon128.png"
   },
   "options_page": "options.html",
-  "background_page": "background.html",
+  "background": { "scripts": ["background.js"] },
   "content_scripts": [{
     "all_frames": true,
     "matches":   ["https://wind.columbia.edu/*",
